aws resources/modules/sg/main.tf
resource "aws_security_group" "kaz_sg" {
    name = var.sg_name
    lifecycle {
      create_before_destroy = true
    }
    #rules - all traffic allowed
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
  
}
